lisage osa, kus kirjutatud oma andmed

--- a/lingid.html
+++ b/lingid.html
@@ -42,6 +42,18 @@
 		<li><a href="valimus.html">Teine välimus</a></li>
 	</ul>
 </nav>
+<main>
+
+	<section>
+		<h2>Kes ma olen?</h2>
+		<ol>
+			<li>Minu nimi on seva</li>
+			<li>Minu perekonnanimi on Tsarev</li>
+			<li>Ma olen 17 aastat vana</li>
+			<li>Ma olen 189 sm pikkus</li>
+		</ol>
+	</section>
+</main>
 
 <footer>
 	<p>&copy;SevaT 2024</p>
