Tegin 6 punkti ülesannetest

--- a/lingid.html
+++ b/lingid.html
@@ -62,6 +62,20 @@
 		<button onclick="addImage()">Lisa pilt</button>
 		<button onclick="clearImages()">Kustuta pildid</button>
 	</section>
+	<section>
+		<h2>Minu armastus kasside vastu: Mängukond</h2>
+		<div>
+			<p>Ma armastan kasse, eriti Mängukonde, mis on üks suurimaid kodukasside tõuge. Mängukonnad on tuntud oma sõbralikkuse ja intelligentsuse poolest, nad on ka väga ilusad. Neil on paksud hallid karvad, suured kõrvad ja hingematvalt ilusad silmad. Nende iseloom on rahulik ja nad on väga head kaaslased.</p>
+			<p><strong>Maine Cooni tõu omadused:</strong></p>
+			<ul>
+				<li>Värv: Hall (sageli erinevate toonide hallid karvad)</li>
+				<li>Suurus: Üks suurimaid kassitõuge, mehed võivad kaaluda isegi kuni 12-15 kg</li>
+				<li>Iseloom: Sõbralik, lahke ja mänguline</li>
+				<li>Karv: Pikk ja tihe, vajab regulaarset hooldust</li>
+			</ul>
+		</div>
+	</section>
+
 </main>
 
 <footer>
